# sure_copy

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.json  package-lock.json  package.json
.agents/skills/solidjs/: SKILL.md
.agents/skills/solidjs/references/: routing.md
.claude/skills/solidjs/references/: api_reference.md  (+2 more)
.husky/: pre-commit
.serena/: project.yml
.serena/memories/: completion_checklist.md  project_overview.md  style_conventions.md  suggested_commands.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/i18n/: en.json  zh.json
sure_copy_core/: Cargo.toml  README.md
sure_copy_core/benches/: checksum.rs  fs_walk.rs  persistent_copy.rs  sqlite_recovery.rs
sure_copy_core/benches/support/: mod.rs
sure_copy_core/src/: domain.rs  infrastructure.rs  interface.rs  lib.rs  orchestrator.rs  pipeline.rs  testing.rs
sure_copy_core/src/infrastructure/: local_fs.rs  mod.rs  sha256_checksum.rs
sure_copy_core/src/orchestrator/: artifact_store.rs  config.rs  errors.rs  mod.rs  orchestrator_in_memory.rs  orchestrator_sqlite.rs  persistent_task.rs  sqlite_artifact_store.rs  task.rs
sure_copy_core/src/pipeline/: mod.rs  plan.rs  registry.rs  stage.rs  stream.rs  types.rs
sure_copy_core/src/pipeline/stages/: mod.rs  verification.rs
sure_copy_core/tests/: infrastructure_traits.rs  local_fs.rs  orchestrator_defaults.rs  orchestrator_in_memory.rs  orchestrator_in_memory_task.rs  orchestrator_sqlite.rs  persistent_task.rs  pipeline.rs  sha256_checksum.rs  verification.rs
sure_copy_core/tests/common/: mod.rs
