[package]
name = "sure_copy_core"
version = "0.1.0"
edition = "2021"
description = "Core task orchestration and durable copy runtime for SureCopy"
readme = "README.md"

[dependencies]
async-trait = "0.1"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
